<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment$FirstTimeFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_nuevo_blanco"
        />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectContact"
            android:id="@+id/pick"
            android:enabled="true"
            android:layout_marginTop="216dp"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/calcCalorias"
            android:id="@+id/texto"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical" />
        <CheckBox
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:id="@+id/check"
            android:layout_toRightOf="@+id/texto"
            android:layout_toEndOf="@+id/texto"
            android:checked="false"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/relativeLayout2">

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/tv1"
            android:gravity="center_vertical"
            android:text="@string/edad"
            android:textSize="18dp"
            android:enabled="false"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/edit1"
            android:enabled="false"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv1"
            android:layout_toEndOf="@+id/tv1"
            android:inputType="number"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/Años"
            android:id="@+id/tv3"
            android:layout_toRightOf="@+id/edit1"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:enabled="false"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tv1"
            android:text="@string/Peso"
            android:id="@+id/tv2"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:enabled="false"
         />
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/edit2"
            android:layout_below="@+id/edit1"
            android:enabled="false"
            android:layout_toRightOf="@+id/tv2"
            android:layout_toEndOf="@+id/tv2"
            android:inputType="number"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/Kg"
            android:id="@+id/tv4"
            android:enabled="false"
            android:gravity="center_vertical"
            android:layout_above="@+id/tv5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/tv2"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv5"
            android:layout_below="@+id/edit2"
            android:text="@string/Sexo"
            android:gravity="center_vertical"
            android:enabled="false"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:layout_below="@+id/tv5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:id="@+id/linearLayout4">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgSexo"
                >
            <RadioButton
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:text="@string/Masc"
                android:layout_gravity="left"
                android:enabled="false"
                android:id="@+id/rbMasc"
                />
            <RadioButton
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:text="@string/Fem"
                android:enabled="false"
                android:id="@+id/rbFem"
                />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/ErrorCampos"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/listo"
            android:layout_toStartOf="@+id/listo"
            android:visibility="invisible"
            android:id="@+id/textError"/>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/listo"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_done_white_24dp"
            android:visibility="gone"/>

        <!--<Button
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:id="@+id/listo"
            android:enabled="false"
            android:text="@string/Listo"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />-->

    </RelativeLayout>
</RelativeLayout>



