<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="150dp"
               android:layout_height="50dp"
               android:text="@string/ContactoElegido"
               android:textSize="18dp"
               android:gravity="center"/>
           <TextView
               android:layout_width="250dp"
               android:layout_height="50dp"
               android:id="@+id/campoContacto"
               android:gravity="center"
               android:textSize="17dp"/>
       </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:text="@string/selectContact"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/textoClick"
                android:clickable="true"

                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/ModoPRO"
                android:textSize="18dp"
                android:gravity="center"/>
            <CheckBox
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="63dp"
                android:layout_marginEnd="63dp"
                android:id="@+id/opcionPro"
                android:checked="false"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/About"
                android:textSize="18dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
